--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "nodebird",
   "version": "0.0.1",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production PORT=80 pm2 start server.js -i 0",
-    "dev": "nodemon app",
+    "dev": "nodemon server",
     "test": "jest"
   },
   "author": "dqlgh",
@@ -15,6 +15,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.478.0",
     "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.0",
     "cookie-parser": "^1.4.6",
@@ -27,6 +28,7 @@
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.6.1",
     "nunjucks": "^3.2.4",
     "passport": "^0.6.0",
